--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+img {
+    max-width: 100%;
+}
+
 /* header section styles */
 header {
     background-color: rgba(229, 84, 115, 0.10);
     display: flex;
-    gap: 120px;
+    gap: 190px;
     align-items: center;
     padding: 30px 125px 0px 125px;
 }
@@ -37,6 +41,7 @@ header {
     padding: 5px 0;
 }
 
+
 .btn-pr {
     margin-top: 13px;
     border-radius: 6px;
@@ -47,5 +52,97 @@ header {
 }
 
 .head-image img {
-    max-width: 80%;
+    max-width: 100%;
 }
+
+.bonus-section {
+    text-align: center;
+    padding: 10px 125px;
+    margin-top: 100px;
+}
+
+.bonus-section h3 {
+    font-weight: 800;
+    text-align: center;
+    font-size: 35px;
+    color: #272727;
+    margin-bottom: 17px;
+    
+}
+.bonus-section p{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+.bonus-image {
+    display: flex;
+ 
+    
+}
+.bonus-image img{
+    width:150px ;
+    height: 210px;
+}
+
+.imgb1{
+    width: 250px;
+    height: 300px;
+    background: rgba(167, 33, 98, 0.15);
+    border-radius: 200px 200px 5px  5px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+.b-image1{
+    width: 300px ;
+    height: 300px ;
+   display: flex;
+   flex-direction: column;
+    align-items: center;
+
+}
+
+.b-image2{
+    width: 300px ;
+    height: 300px ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.img2{
+    width: 250px;
+    height: 300px;
+    background: rgba(5, 151, 160, 0.15);
+    border-radius: 200px 200px 5px  5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.b-image3{
+    width: 300px ;
+    height: 300px ;
+   display: flex;
+   flex-direction: column;
+    align-items: center;
+}
+.img3{
+    width: 250px;
+    height: 300px;
+    background: rgba(71, 125, 17, 0.15);
+    border-radius: 200px 200px 5px  5px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+.bonus-image a{
+    color: #272727;
+    margin-top: 10px;
+    font-weight: 700;
+    font-size: 15px;
+    
+}   
