--- a/style.css
+++ b/style.css
@@ -82,10 +82,8 @@ header {
 }
 
 .bonus-image {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
+   display: flex;
+   gap: 10px;
     
 }
 .bonus-image img{
@@ -96,8 +94,8 @@ header {
 .imgb1{
     width: 250px;
     height: 300px;
-    background: rgba(167, 33, 98, 0.15);
-    border-radius: 200px 200px 5px  5px;
+   
+    
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -108,42 +106,18 @@ header {
    display: flex;
    flex-direction: column;
     align-items: center;
-
 }
-
-.b-image2{
-    width: 300px ;
-    height: 300px ;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.img1{
+     background: rgba(167, 33, 98, 0.15);
+     border-radius: 200px 200px 5px  5px;
 }
 .img2{
-    width: 250px;
-    height: 300px;
-    background: rgba(5, 151, 160, 0.15);
     border-radius: 200px 200px 5px  5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.b-image3{
-    width: 300px ;
-    height: 300px ;
-   display: flex;
-   flex-direction: column;
-    align-items: center;
+    background: rgba(5, 151, 160, 0.15);
 }
 .img3{
-    width: 250px;
-    height: 300px;
-    background: rgba(71, 125, 17, 0.15);
     border-radius: 200px 200px 5px  5px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    background: rgba(71, 125, 17, 0.15);
 }
 .bonus-image a{
     color: #272727;
