--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ header {
     font-size: 35px;
     color: #272727;
     margin-bottom: 17px;
+    margin-top: 100px;
     
 }
 .bonus-section p{
@@ -78,7 +79,7 @@ header {
     font-size: 15px;
     font-weight: 400;
     line-height: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .bonus-image {
@@ -92,8 +93,8 @@ header {
 }
 
 .imgb1{
-    width: 250px;
-    height: 300px;
+    width: 280px;
+    height: 400px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
